# screen-ai-reader-rust

./: Cargo.toml  README.md
src/: ai.rs  app.rs  capture.rs  config.rs  main.rs  ollama.rs  online.rs
src/ui/: chatsidebar.rs  local_llm.rs  mod.rs  online_llm.rs  popup.rs  selecting.rs  toolbox.rs
