[package]
name = "screen-ai-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Skärmfångst
screenshots = "0.8"
image = { version = "0.25", features = ["png"] }

# Async & HTTP
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Serialisering
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Clipboard
arboard = "3"

[profile.release]
opt-level = 3
lto = true