[package]
name = "screen-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
screenshots = "0.8"
image = "0.25"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
base64 = "0.22.1"
chrono = "0.4.42"


[profile.release]
opt-level = 3
lto = true

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
